# Concentration-Regimes-A-Probabilistic-Model-of-Institutional-Trading-Behavior

./: .gitignore  README.md  pipeline.py  pyproject.toml  requirements.txt
config/: config.yaml
docs/: 00_project_overview.md  01_data_preparation.md  02_feature_engineering.md  03_models.md  04_validation_framework.md  05_backtesting.md  FII_stockday_data_dictionary.md  STAGES.md
docs/paper/: FII_paper_draft.md  FII_paper_outline.md  FII_thesis.md
docs/research_log/: FII_Module1_findings.md  FII_Module2_hmm_log.md  FII_Module3_validation_log.md  FII_Module5_validation_log.md
scripts/: build_thesis_pdf.sh  fingerprint_artifacts.py  migrate_colab_modules.py  setup_data.sh
src/fii/: config.py  paths.py  runner.py
src/fii/backtest/: engine.py  engine_gates.py  gross_diagnosis.py  module12c_strategies_hmm.py  strategies_base.py  style_switch.py
src/fii/data_prep/: module5b1_ca_factors.py  module5b2_apply_adjustment.py  module5j_canonical_panel.py  price_panel.py
src/fii/features/: feature_store.py
src/fii/models/: _template.py  base.py  factorial_hmm.py  hmm_regime.py  lightgbm_gbt.py  registry.py
src/fii/phase2/: calibration.py  causal_filtering.py  decision.py  hazard.py
src/fii/reporting/: collect_outputs.py  make_exhibits.py
src/fii/stages/: registry.py
src/fii/validation/: backbone_ablation.py  event_study.py  flow_innovation.py  incremental_value.py  module10_vix_lambda.py  module6_deal_corroboration.py  module6b_liquidity_shock_profile.py  module7b_robustness.py  module8_gbt_shap.py  module8b_demeaning_check.py  panel_regression.py  pin_model.py  (+5 more)
(+29 files in other folders)
