[project]
name = "fii-flow-regimes"
version = "1.0.0"
description = "FII flow-regime detection and the transitory/permanent decomposition of institutional price impact — reproducible research pipeline"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "polars>=1.0",
    "pyarrow>=15.0",
    "scipy>=1.12",
    "statsmodels>=0.14",
    "linearmodels>=6.0",
    "hmmlearn>=0.3",
    "lightgbm>=4.3",
    "scikit-learn>=1.4",
    "pyyaml>=6.0",
    "matplotlib>=3.8",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
